--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "url": "git://github.com/bfirsh/jsnes.git"
   },
   "license": "BSD",
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.1",
-    "grunt-contrib-jshint": "~0.5.4"
+  "dependencies": {
+    "async": "^2.1.2",
+    "body-parser": "^1.15.2",
+    "brfs": "^1.4.3",
+    "d3": "^4.2.7",
+    "express": "^4.14.0",
+    "grunt": "^1.0.1",
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-express-server": "^0.5.3",
+    "grunt-standard": "^2.0.0",
+    "moment": "^2.15.1",
+    "standard": "^4.5.4"
   }
 }
