--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-express-server": "^0.5.3",
     "grunt-standard": "^2.0.0",
     "moment": "^2.15.1",
-    "standard": "^4.5.4"
+    "standard": "^4.5.4",
+    "stats.js": "^0.16.0"
   }
 }
